# public/swagger.json
@@ -3626,6 +3626,44 @@
 				]
 			}
 		},
+		"/users/by-email": {
+			"get": {
+				"operationId": "GetUserbyemail",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/IUser"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "The requested user is not found"
+					}
+				},
+				"description": "Get a user details by email",
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "email",
+						"required": false,
+						"schema": {
+							"type": "string"
+						},
+						"example": "haitham.his@gmail.com"
+					}
+				]
+			}
+		},
 		"/users/create": {
 			"post": {
 				"operationId": "CreateUser",
